<resources>
    <string name="app_name">Seller</string>
    <string name="action_settings">setting</string>
    <string name="action_scan">scan</string>
    <string name="commodity_title">商品名称</string>
    <string name="sale_info">价格：23.2  周销量：10  退货率：0.1</string>
    <string name="hint_commodity_category">类目名称</string>
    <string name="commodity_price">商品价格</string>
    <string name="commodity_count">8</string>
    <string name="commodity_images">货物图片</string>
    <string name="commodity_desc">货物描述</string>
    <string name="price">价格</string>
    <string name="option_in_stock">是否有货</string>
    <string name="option_in_discount">特价商品</string>
    <string name="option_support_return">支持退货</string>
    <string name="submit">添加</string>
    <string name="add_commodity">添加货物</string>
    <string name="edit_commodity">添加货物</string>
    <string name="add_commodity_image">添加图片</string>
    <string name="delete">X</string>
    <string name="EXTRA_FRAGMENT">extra_fragment</string>
    <string name="EXTRA_COMMODITY_ID">extra_commodity_id</string>
    <string name="EXTRA_CATEGORY_ID">extra_category_id</string>
    <string name="EXTRA_COMMODITY_BARCODE_ID">extra_commodity_barcode</string>
    <string name="EXTRA_CATEGORY_TITLE">extra_commodity_category_title</string>
    <string name="EXTRA_EXPRESSMAN_ID">extra_expressman_id</string>
    <string name="EXTRA_MESSAGE_ID">extra_message_id</string>
    <string name="EXTRA_LOADING_TIMESTAMP">extra_loading_timestamp</string>
    <string name="EXTRA_RETURN_TIMESTAMP">extra_return_timestamp</string>
    <string name="EXTRA_SELECTED_IMAGES">extra_selected_images</string>
    <string name="EXTRA_SCAN_RESULT">extra_scan_result</string>
    <string name="EXTRA_BARCODE_FORMAT">extra_barcode_format</string>
    <string name="FRAGMENT_ORDER">fragment_order</string>
    <string name="tab_commodity">货物</string>
    <string name="tab_order">订单</string>
    <string name="tab_statistic">统计</string>

    <string name="ORDER_STATUS_NEW">新订单</string>
    <string name="ORDER_STATUS_ACCEPTED">待发货</string>
    <string name="ORDER_STATUS_LOADED">已发货</string>
    <string name="ORDER_STATUS_PAID">已付款</string>
    <string name="ORDER_STATUS_RETURNED">已退货</string>
    <string name="ORDER_STATUS_CLAIMED">理赔</string>

    <string name="PREF_UPDATE_CATEGORY_INTERVAL">10</string>
    <string name="PREF_UPDATE_ORDER_INTERVAL">10</string>
    <string name="PREF_UPDATE_EXPRESSMAN_MESSAGE_INTERVAL">10</string>

    <string name="RMB">¥ </string>


    <string name="more">More</string>
    <string name="item_1">First Item</string>
    <string name="item_2">Second Item</string>
    <string name="cd_logo">logo</string>
    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>

    <string name="menu_rename">改名</string>
    <string name="menu_disable">下架</string>
    <string name="menu_enable">上架</string>
    <string name="menu_remove">删除</string>

    <string name="btn_action">action</string>
    <string name="btn_reject">拒绝</string>
    <string name="btn_accept">接收</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_ok">确认</string>
    <string name="btn_cancel">取消</string>

    <string name="menu_confirm">确认</string>

    <string name="ACTIVITY_EDIT_COMMODITY">修改商品</string>
    <string name="ACTIVITY_ADD_COMMODITY">添加商品</string>
    <string name="ACTIVITY_PICK_IMAGE">选择照片</string>
    <string name="ACTIVITY_ORDER_LIST">订单</string>
    <string name="ACTIVITY_NEW_ORDER">新订单</string>
    <string name="ACTIVITY_PREPARE_ORDER">准备订单</string>
    <string name="ACTIVITY_ACCEPTED_ORDER">待发货订单</string>
    <string name="ACTIVITY_CHECK_LOADING_ORDER">确认发货订单</string>
    <string name="ACTIVITY_CHECK_RETURN_ORDER">确认退货订单</string>
    <string name="ACTIVITY_LOADED_ORDER">已发货订单</string>
    <string name="ACTIVITY_PAID_ORDER">已付款订单</string>
    <string name="ACTIVITY_RETURNED_ORDER">已退货订单</string>
    <string name="ACTIVITY_CLAIMED_ORDER">理赔订单</string>

    <string name="REMOTE_SERVER_ERROR">服务器出了点问题</string>
    <string name="NETWORK_ERROR">网络出了点问题</string>

    <string name="DIALOG_MESSAGE_REJECT_ORDER">
        过多地拒绝订单会降低店铺的信誉，您可以设置该货物没有库存来避免用户下单
    </string>
    <string name="DIALOG_TITLE_REJECT_ORDER">确认操作</string>
    <string name="DIALOG_MESSAGE_DELETE_CATEGORY">
        确定删除这个类目
    </string>
    <string name="DIALOG_MESSAGE_DELETE_COMMODITY">
        确定删除这个商品
    </string>

    <string name="PROGRESS_DIALOG_TITLE">正在处理</string>
    <string name="PROGRESS_DIALOG_MESSAGE">请稍候</string>

    <string name="scan_text">将条码放入框内, 即可自动扫描</string>


    <string name="unit_prompt">单位</string>
    <string-array name="unit_array">
        <item>件</item>
        <item>斤</item>
        <item>两</item>
    </string-array>

    <string name="commodity_status_prompt">状态</string>
    <string-array name="commodity_status_array">
        <item>有货</item>
        <item>缺货</item>
        <item>删除</item>
    </string-array>

    <string-array name="in_stock_status_array">
        <item>有货</item>
        <item>缺货</item>
    </string-array>
    <string name="in_stock">有货</string>
    <string name="out_of_stock">缺货</string>

    <string-array name="add_image_action">
        <item>相册</item>
        <item>拍照</item>
    </string-array>

    <string-array name="set_image_action">
        <item>设为图标</item>
        <item>删除图片</item>
    </string-array>

</resources>
