<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:hint="@string/commodity_title"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="0.6"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/price"/>
        <Spinner
            android:id="@+id/unit"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="46dp"
            android:entries="@array/unit_array"
            android:prompt="@string/unit_prompt">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="@string/option_in_stock"/>
            <CheckBox
                android:id="@+id/option_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="@string/option_in_discount"/>
            <CheckBox
                android:id="@+id/option_in_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="@string/option_support_return"/>
            <CheckBox
                android:id="@+id/option_support_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hg.www.selller.util.HorizontalListView
            android:id="@+id/image_list"
            android:layout_width="wrap_content"
            android:layout_height="100dp">
        </com.hg.www.selller.util.HorizontalListView>
        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/add_commodity_image"/>
    </LinearLayout>

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/commodity_desc"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:text="@string/submit"
        android:layout_gravity="center"/>

</LinearLayout>
